--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -13,5 +13,6 @@
 @import './blocks/index-page/testimonials.scss';
 @import './blocks/index-page/works.scss';
 @import './blocks/index-page/video.scss';
+@import './blocks/index-page/map.scss';
 
 @import url('https://fonts.googleapis.com/css?family=Hammersmith+One|Playfair+Display:400,700|Roboto&display=swap');
