--- a/src/views/blocks/index-page/footer.pug
+++ b/src/views/blocks/index-page/footer.pug
@@ -8,7 +8,7 @@ section.section-footer
           |lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh elit. Duis sed odio sit amet auctror a ornare odio non mauris vitae erat in elit
       li.section-footer__contacts.contacts
         p.contacts__title Our studio
-        p.contacts__address
+        button.contacts__address
           |Ruko cucruk, Jl. Radio luar dalem jos No.12 - 13, Kalideres - Jakarta Barat 11480 - Indonesia
         p.contacts__phone
           |(+62) 21-2224 3333
