--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -11,3 +11,4 @@ block content
     include ../blocks/index-page/testimonials
     include ../blocks/index-page/contact
     include ../blocks/index-page/footer
+    include ../blocks/index-page/map
