--- a/src/assets/styles/blocks/index-page/footer.scss
+++ b/src/assets/styles/blocks/index-page/footer.scss
@@ -59,6 +59,9 @@
   position: relative;
   width: 237px;
   margin-left: 36px;
+  background-color: transparent;
+  border: none;
+  text-align: left;
 }
 
 .contacts__address::before {
